--- a/ClientKarakatsiyaHelper/src/styles.css
+++ b/ClientKarakatsiyaHelper/src/styles.css
@@ -5,8 +5,12 @@
   --botton-bg-hover: #6f8bc8;
   --botton-text: #ffffff;
   --botton-text-hover: #f0f0f0;
+  --botton-important-bg: #01849b;
+  --botton-important-bg-hover: #069901;
   --left-panel-bg: rgba(71, 93, 134, 0.7);
   --item-create-bg: #4d6592;
+  --input-bg: #2a3955;
+  --input-text: #e0e0e0;
 }
 
 body.dark-theme {
@@ -16,8 +20,12 @@ body.dark-theme {
   --botton-bg-hover: #29506e;
   --botton-text: #e0e0e0;
   --botton-text-hover: #ffffff;
+  --botton-important-bg: #0a0157;
+  --botton-important-bg-hover: #055f02;
   --left-panel-bg: rgba(14, 26, 43, 0.7);
   --item-create-bg: #152741;
+  --input-bg: #355483;
+  --input-text: #adadad;
 }
 
 :root, .dark-theme {
